--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-MESFLIX
+<header>MESFLIX</header>
 
 
-ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?
+<h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
 #homem aranha 
