--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
+<head>
+    <link rel= "stylesheet" href="styles.css" />
+<head>
+
+<body>
+
 <header>MESFLIX</header>
+
 
 
 <h1>NEYMAR JUNIOR SKILLS</h1>
