--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
     <link rel= "stylesheet" href="styles.css" />
-    <titulo>MESFLIX</titulo>
+    <title>MESFLIX</title>
     <head>
 
 <body>
